--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Gaston Demergasso</h1>
-    <a href="Clase 4/LemonPie.html">Lemon Pie</a>
+    <header><h1>Gaston Demergasso</h1></header>
+    <main>
+        <p><a href="Clase 4/LemonPie.html">Lemon Pie v1 (Clase 4)</a></p>
+        <p><a href="Clase 5/LemonPie v2.html">Lemon Pie v2 (Clase 5)</a></p>
+        <p><a href="Clase 6/index.html">Petshop (Clase 6)</a></p>
+    </main>
 </body>
 </html>
