--- a/Clase 6/index.html
+++ b/Clase 6/index.html
@@ -1,60 +1,49 @@
 <!DOCTYPE HTML>
 <html>
-  <head>
-    <title> MI PRIMER TITULO </title>
-<style>
-p {
-    font-family: Helvetica;
-    font-size: 20px;
-    font-weight: bold;
-    font-style: italic;
-    color: #0838c7;
-    background-color: #6ceb6c;
-    border-style: solid;
-    border-color: #f50c0c;
-    border-width: 2px;
-    margin: 14px;
-    padding: 20px;
-    border-radius: 14px;
-}
-
-</style>
-  </head>
+    <head>
+        <title> Petshop </title>
+    </head>
 
 <body>
     <header>
         <p>Grandes ofertas en comederos</p>
         <nav>
-        Español
-        $ARG
+            Menu regional
+            <ul>
+                <li>Español</li>
+                <li>$ARG</li>
+            </ul>
         </nav>
-        <nav id="Barra de menú principal">
-            ● Imagen logo
-            ● Menú principal
-            ● Categorías
-            ● Pets
-            ● Nosotros
-            ● Contactanos
     </header>
     <main>
+        <nav id="Barra de menú principal">
+            <img src="img/Logo.png" alt="Logo">
+            <li>Menú principal</li>
+            <li>Categorías</li>
+            <li>Pets</li>
+            <li>Nosotros</li>
+            <li>Contactanos</li>
+        </nav>
         <section id="banner">
-            Imagen background
-            ¡Es un placer tenerte aquí!
-            ¡Comederos en descuento!
-            COMEDEROS</section>
+            <img src="img/banner.png" alt="comedero de mascotas y huesos de juguete">
+            <p>¡Es un placer tenerte aquí!</p>
+            <p>¡Comederos en descuento!</p>
+            <p>COMEDEROS</p>
+        </section>
         <section id="productos">
-            Imagen patita
-            Productos Destacados
-            Comederos - Accesorios - Comida
-            Imagen producto 1
-            Juguete Churrasquito
-            $150
-            Imagen producto 2
-            Juguete Churrasquito
-            $150
-            Imagen producto 1
-            Juguete Churrasquito
-            $150</section>
+            <img src="img/pawprint 1.png" alt="imagen patita">
+            <h2>Productos Destacados</h2>
+            <p>Comederos - Accesorios - Comida</p>
+            <img src="img/churrasquito.png" alt="churrasquito">
+            <h6>Juguete Churrasquito</h6>
+            <p>$150</p>
+            <img src="img/comedero.png" alt="comedero para perro">
+            <h6>Comedero para perro</h6>
+            <p>$150</p>
+            <img src="img/Huesito.png" alt="juguete Huesito">
+            <h6>Juguete Huesito</h6>
+            <p>$150</p>
+        </section>
     </main>
     <footer>Todos los derechos reservados Front End</footer>
 </body>
