--- a/Clase 7/batman.html
+++ b/Clase 7/batman.html
@@ -9,9 +9,42 @@
 </head>
 <body>
     <header width=1440px alt=233px>
-    <h1>CURRICULUM VITAE DE BRUCE WAYNE</h1>    
+        <br>
+        <img src="img/logo batman.png" alt="batman">
+        <h1>CURRICULUM VITAE DE BRUCE WAYNE</h1>    
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+        <h2>DATOS PERSONALES</h2>
+        <ul>
+            <li><span class="indicadores1">Nombre completo:</span> Bruce Wayne</li>
+            <li><span class="indicadores1">Fecha de nacimiento:</span> 01/05/1939</li>
+            <li><span class="indicadores1">Lugar de nacimiento:</span> Gotham City</li>
+        </ul>
+        <h2>FORMACIÓN ACADEMICA</h2>
+        <dl>
+            <dt class="indicadores">1956-1961</dt>
+            <dd>Universidad del espantapájaros</dd>
+            <dd>Licenciatura en aeronaútica</dd>
+            <dt class="indicadores">1952-1956</dt>
+            <dd>Secundario Gotham</dd>
+            <dd>Bachiller con especialización en trucos</dd>
+        </dl>
+        <h2>EXPERIENCIA LABORAL</h2>
+        <dl>
+            <dt class="indicadores">1975-1985:</dt>
+            <dd>Desocupado</dd>
+            <dd>Sin trabajo porque se me rompió el batimovil</dd>
+            <dt class="indicadores">1965-1975</dt>
+            <dd>Cazavillanos y demás chusma</dd>
+            <dd>Atrapé a Gatubela a joker a Victor Fries lo dejé porque se me congeló la capa</dd>
+            <dt class="indicadores">1962-1965</dt>
+            <dd>Aprendiz de superhéroes</dd>
+            <dd>Hice pasantía con Superman. Opté por usar mascara porque no pude aprender a peinarme el rulo</dd>
+        </dl>
+    </main>
+    <footer>0810 - BATMAN
+        <img src="img/ico_instagram.png" alt="instagram logo">
+        <img src="img/ico_linkedin.png" alt="linkedin logo">
+    </footer>
 </body>
 </html>
