--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <p><a href="Clase 4/LemonPie.html">Lemon Pie v1 (Clase 4)</a></p>
         <p><a href="Clase 5/LemonPie v2.html">Lemon Pie v2 (Clase 5)</a></p>
         <p><a href="Clase 6/index.html">Petshop (Clase 6)</a></p>
+        <p><a href="Clase 7/batman.html">Batman (Clase 7)</a></p>
+        <!-- HACERCV PERSONAL <p><a href="Clase 6/index.html">Petshop (Clase 7)</a></p> -->
+        
     </main>
 </body>
 </html>
